Empty trash takes three mins to empty 9000 txt files
Affected version
Latest Ubuntu LTS $ nautilus --version GNOME nautilus 3.36.3
Steps to reproduce
- Create 9000 files, in one directory
- Remove the directory (to trash)
- Empty the trash
Current behavior
Emptying 9000 files takes three mins. Very slow?
2467 user 20 0 451160 11700 7012 S 73.1 0.1 7:37.87 gvfsd-trash
3694399 user 20 0 1265392 166012 56976 S 70.4 1.0 3:37.45 nautilus
Expected behavior
Empty in 5-10 seconds. This performs the real deletion, ie rm -rf The shell can remove the same files in 3 seconds.
Additional information
Easy to reproduce every time.